@@ -1,7 +1,7 @@
 #  File src/library/utils/R/unix/download.file.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -36,8 +36,6 @@ download.file <-
             method <- "wget"
         else if(system("curl --help > /dev/null") == 0L)
             method <- "curl"
-        else if(system("lynx -help > /dev/null") == 0L)
-            method <- "lynx"
         else
             stop("no download method found")
     }
@@ -59,13 +57,8 @@ download.file <-
                                paste(extra, collapse = " "),
                                shQuote(url),
                                " -o", shQuote(path.expand(destfile))))
-    } else if(method == "lynx") {
-        warning("method 'lynx' is untested and deprecated as from R 3.1.0")
-        status <- system(paste("lynx -dump",
-                               paste(extra, collapse = " "),
-                               shQuote(url),
-                               ">", shQuote(path.expand(destfile))))
-    }
+    } else if(method == "lynx")
+        stop("method 'lynx' is defunct as from R 3.1.0", domain = NA)
 
     if(status) warning("download had nonzero exit status")
 
