@@ -1,7 +1,7 @@
 #  File src/library/utils/R/windows/download.file.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -37,8 +37,6 @@ download.file <-
             method <- "wget"
         else if(system("curl --help", invisible=TRUE) == 0L)
             method <- "curl"
-        else if(shell("lynx -help", invisible=TRUE) == 0L)
-            method <- "lynx"
         else
             stop("no download method found")
     }
@@ -58,15 +56,8 @@ download.file <-
                                paste(extra, collapse = " "),
                                shQuote(url),
                                " -o", shQuote(path.expand(destfile))))
-    } else if(method == "lynx") {
-        warning("method 'lynx' is untested and deprecated as from R 3.1.0")
-        if(!cacheOK) extra <- c(extra, "--reload")
-        ## if would be better to use system2().
-        status <- shell(paste("lynx -dump",
-                              paste(extra, collapse = " "),
-                              shQuote(url), ">",
-                              shQuote(path.expand(destfile))))
-    }
+    } else if(method == "lynx")
+        stop("method 'lynx' is defunct as from R 3.1.0", domain = NA)
 
     if(status > 0L)
         warning("download had nonzero exit status")
