@@ -25,9 +25,9 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
     file is saved.  Tilde-expansion is performed.}
 
   \item{method}{Method to be used for downloading files.  Currently
-    download methods \code{"internal"}, \code{"wget"}, \code{"curl"} and
-    \code{"lynx"} are available, and there is a value \code{"auto"}: see
-    \sQuote{Details} and \sQuote{Note}.
+    download methods \code{"internal"}, \code{"wget"} and \code{"curl"},
+    and there is a value \code{"auto"}: see \sQuote{Details} and
+    \sQuote{Note}.
 
     The method can also be set through the option
     \code{"download.file.method"}: see \code{\link{options}()}.
@@ -48,7 +48,7 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
     \code{"curl"} methods.}
 
   \item{extra}{character vector of additional command-line arguments for
-    the \code{"wget"}, \code{"curl"} and \code{"lynx"} methods.}
+    the \code{"wget"} and \code{"curl"} methods.}
 }
 \details{
   The function \code{download.file} can be used to download a single
@@ -61,19 +61,18 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
   If \code{method = "auto"} is chosen (the default), the internal method
   is chosen for \samp{file://} URLs, and for the others provided
   \code{\link{capabilities}("http/ftp")} is true (which it almost always
-  is).  Otherwise methods \code{"wget"}, \code{"curl"} and \code{"lynx"}
-  are tried in turn.
+  is).  Otherwise methods \code{"wget"} and \code{"curl"}.
 #endif
 #ifdef windows
   If \code{method = "auto"} is chosen (the default), the internal method
   is used on Windows.
 #endif
 
-  For methods \code{"wget"}, \code{"curl"} and \code{"lynx"} a system
-  call is made to the tool given by \code{method}, and the respective
-  program must be installed on your system and be in the search path for
-  executables.  They will block all other activity on the \R process
-  until they complete: this may make a GUI unresponsive.
+  For methods \code{"wget"} and \code{"curl"} a system call is made to
+  the tool given by \code{method}, and the respective program must be
+  installed on your system and be in the search path for executables.
+  They will block all other activity on the \R process until they
+  complete: this may make a GUI unresponsive.
 
   \code{cacheOK = FALSE} is useful for \samp{http://} URLs, and will
   attempt to get a copy directly from the site rather than from an
@@ -153,9 +152,6 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
 
   \command{curl} (\url{http://curl.haxx.se/}) is installed on OS X and
   commonly on Unix-alikes.  Windows binaries are available at that URL.
-
-  Use of \command{lynx} (\url{http://lynx.browser.org/} is of historical
-  interest and now deprecated.
 }
 \section{Setting Proxies}{
   This applies to the internal code only.
@@ -191,7 +187,7 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
 }
 \value{
   An (invisible) integer code, \code{0} for success and non-zero for
-  failure.  For the \code{"wget"} and \code{"lynx"} methods this is the
+  failure.  For the \code{"wget"} and \code{"curl"} methods this is the
   status code returned by the external program.  The \code{"internal"}
   method can return \code{1}, but will in most cases throw an error.
 }
